{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 109,
  "lineage": "598c8717-d162-23af-1a16-fcdeb174b13e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bc5c8555660b893",
            "association_id": "eipassoc-028c2f96e1e8bf295",
            "domain": "vpc",
            "id": "eipalloc-04bc5c8555660b893",
            "instance": "i-05dc91f337daf720b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0700b9e089481db4f",
            "private_dns": "ip-10-1-0-77.ap-south-1.compute.internal",
            "private_ip": "10.1.0.77",
            "public_dns": "ec2-3-111-142-62.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.142.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_key_pair.deployer",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3189a4ec9e039e",
            "arn": "arn:aws:ec2:ap-south-1:822066771166:instance/i-05dc91f337daf720b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0eab9954f932071b2",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dc91f337daf720b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.xlarge",
            "ipv6_address_count": 0,
            "key_name": "Madhuri123",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0700b9e089481db4f"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-023c79f14d1d0fc8c"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0700b9e089481db4f",
            "private_dns": "ip-10-1-0-77.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-09093a0bb10e38185",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069c51d9549a45019",
            "tags": {
              "Name": "FortiGateVM"
            },
            "tags_all": {
              "Name": "FortiGateVM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6e07639b6378168",
              "sg-0cb46180b200a6daf"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fgtvmigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:internet-gateway/igw-0aab12c9be6ad861a",
            "id": "igw-0aab12c9be6ad861a",
            "owner_id": "822066771166",
            "tags": {
              "Name": "fgtvm-igw"
            },
            "tags_all": {
              "Name": "fgtvm-igw"
            },
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:network-interface/eni-0700b9e089481db4f",
            "description": "fgtvm-port1",
            "id": "eni-0700b9e089481db4f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1f:17:58:69:92",
            "owner_id": "822066771166",
            "private_dns_name": "ip-10-1-0-77.ap-south-1.compute.internal",
            "private_ip": "10.1.0.77",
            "private_ip_list": [
              "10.1.0.77"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.0.77"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a6e07639b6378168"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069c51d9549a45019"
          },
          "dependencies": [
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:network-interface/eni-023c79f14d1d0fc8c",
            "description": "fgtvm-port2",
            "id": "eni-023c79f14d1d0fc8c",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:6d:52:b9:7f:30",
            "owner_id": "822066771166",
            "private_dns_name": "ip-10-1-1-224.ap-south-1.compute.internal",
            "private_ip": "10.1.1.224",
            "private_ip_list": [
              "10.1.1.224"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.224"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a6e07639b6378168"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b43020b141558a0f"
          },
          "dependencies": [
            "aws_subnet.privatesubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "externalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aab12c9be6ad861a",
            "id": "r-rtb-0b2690a2c336b88271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2690a2c336b8827",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fgtvmigw",
            "aws_route_table.fgtvmpublicrt",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-056c30157634c42ce1080289494",
            "instance_id": "i-05dc91f337daf720b",
            "instance_owner_id": "822066771166",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-023c79f14d1d0fc8c",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056c30157634c42ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_key_pair.deployer",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_route_table.fgtvmprivatert",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:route-table/rtb-056c30157634c42ce",
            "id": "rtb-056c30157634c42ce",
            "owner_id": "822066771166",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgtvm-private-rt"
            },
            "tags_all": {
              "Name": "fgtvm-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmpublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:route-table/rtb-0b2690a2c336b8827",
            "id": "rtb-0b2690a2c336b8827",
            "owner_id": "822066771166",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgtvm-public-rt"
            },
            "tags_all": {
              "Name": "fgtvm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internalassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9c4371e72c76242",
            "route_table_id": "rtb-056c30157634c42ce",
            "subnet_id": "subnet-0b43020b141558a0f"
          },
          "dependencies": [
            "aws_route_table.fgtvmprivatert",
            "aws_subnet.privatesubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03033c381090bad1e",
            "route_table_id": "rtb-0b2690a2c336b8827",
            "subnet_id": "subnet-069c51d9549a45019"
          },
          "dependencies": [
            "aws_route_table.fgtvmpublicrt",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:security-group/sg-01d4d882497adc2c5",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d4d882497adc2c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow All",
            "name_prefix": "",
            "owner_id": "822066771166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:security-group/sg-0cb46180b200a6daf",
            "description": "Public Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb46180b200a6daf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "Public Allow",
            "name_prefix": "",
            "owner_id": "822066771166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:subnet/subnet-0b43020b141558a0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b43020b141558a0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822066771166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az1"
            },
            "tags_all": {
              "Name": "private subnet az1"
            },
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:subnet/subnet-069c51d9549a45019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c51d9549a45019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822066771166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-0b36e8a1c35dd2461"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fgtvm-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:vpc/vpc-0b36e8a1c35dd2461",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a3215d57b656d38c",
            "default_route_table_id": "rtb-0e158d3fcb8e7d5d7",
            "default_security_group_id": "sg-0a6e07639b6378168",
            "dhcp_options_id": "dopt-0ab7d71ba3704dc83",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b36e8a1c35dd2461",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e158d3fcb8e7d5d7",
            "owner_id": "822066771166",
            "tags": {
              "Name": "terraform demo"
            },
            "tags_all": {
              "Name": "terraform demo"
            }
          }
        }
      ]
    }
  ]
}